--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="public/css/main.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	<title>Document</title>
 </head>
 
-<body>
+<body><!--
 	<div class='header'>
-		<!--<div>
+		<div>
                 <img class='logo' src="assets/logo.png" alt="">
             </div>-->
 		<div class='header-nav'>
@@ -61,7 +63,22 @@
 			</div>
 		</div> <span>show navigation</span> </div>
 	<div class='slider'> <img class='slider-image' src="./Assets/images/wallpapertip_colourful-wallpaper_1056898.jpg                                                                                                                                                                                                              " alt="">
-		<button class='slider-button'>Shop With Us</button>
+		
+		<!--<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval="100">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="..." alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="..." alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="..." alt="Third slide">
+    </div>
+  </div>
+</div>--> 
+
+<button class='slider-button'>Shop With Us</button>
 	</div>
 	<div class="box">
 		<div class="sections">
@@ -169,7 +186,9 @@
 				</div>
 			</div>
 		</div>
-	</footer>
+	</footer> ---
+
+
 </body>
 
 </html>
